# oo-patterns

./: CHANGELOG.md  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/modules/: oo_patterns.behavioral.observer.events_managers.rst  oo_patterns.behavioral.observer.interfaces.rst  oo_patterns.behavioral.observer.publishers.rst  oo_patterns.behavioral.observer.rst  oo_patterns.behavioral.observer.sub_space_publishers.rst  oo_patterns.behavioral.rst  oo_patterns.behavioral.state.base.rst  oo_patterns.behavioral.state.interfaces.rst  oo_patterns.behavioral.state.rst  oo_patterns.rst  oo_patterns.tests.behavioral.observer.rst  oo_patterns.tests.behavioral.observer.test_events_managers.rst  oo_patterns.tests.behavioral.observer.test_interfaces.rst  oo_patterns.tests.behavioral.observer.test_publishers.rst  oo_patterns.tests.behavioral.observer.test_sub_space_publishers.rst  oo_patterns.tests.behavioral.rst  oo_patterns.tests.behavioral.state.rst  oo_patterns.tests.behavioral.state.test_base.rst  oo_patterns.tests.behavioral.state.test_interfaces.rst  oo_patterns.tests.helpers.rst  oo_patterns.tests.rst  oo_patterns.tests.test_package.rst  oop.behavioral.rst  oop.behavioral.state.base.rst  oop.behavioral.state.interfaces.rst  oop.behavioral.state.rst  oop.rst  oop.tests.behavioral.rst  oop.tests.behavioral.state.rst  oop.tests.behavioral.state.test_base.rst  oop.tests.behavioral.state.test_interfaces.rst  oop.tests.rst  oop.tests.test_package.rst
oo_patterns/: __init__.py
oo_patterns/behavioral/: __init__.py
oo_patterns/behavioral/observer/: __init__.py  events_managers.py  interfaces.py  publishers.py  sub_space_publishers.py
oo_patterns/behavioral/state/: __init__.py  base.py  interfaces.py
oo_patterns/tests/: helpers.py  test_package.py
oo_patterns/tests/behavioral/observer/: test_events_managers.py  test_interfaces.py  test_publishers.py  test_sub_space_publishers.py
oo_patterns/tests/behavioral/state/: test_base.py  test_interfaces.py
oop/: __init__.py
oop/behavioral/observer/: base.py  context.py  interfaces.py
oop/behavioral/state/: base.py  interfaces.py
oop/tests/: test_package.py
oop/tests/behavioral/state/: test_base.py  test_interfaces.py
